--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:41:34.012652Z",
-     "start_time": "2023-01-23T06:41:33.168634Z"
+     "end_time": "2023-01-23T14:40:31.881604Z",
+     "start_time": "2023-01-23T14:40:31.054702Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:41:34.043090Z",
-     "start_time": "2023-01-23T06:41:34.013808Z"
+     "end_time": "2023-01-23T14:40:31.913589Z",
+     "start_time": "2023-01-23T14:40:31.882753Z"
     }
    },
    "outputs": [],
@@ -255,8 +255,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:41:34.058448Z",
-     "start_time": "2023-01-23T06:41:34.044599Z"
+     "end_time": "2023-01-23T14:40:31.929461Z",
+     "start_time": "2023-01-23T14:40:31.915488Z"
     }
    },
    "outputs": [],
@@ -525,8 +525,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:41:34.115645Z",
-     "start_time": "2023-01-23T06:41:34.059535Z"
+     "end_time": "2023-01-23T14:40:31.990886Z",
+     "start_time": "2023-01-23T14:40:31.932048Z"
     }
    },
    "outputs": [],
@@ -905,7 +905,7 @@
     "            _b -= _np.mean(_b)\n",
     "            _b /= _np.std(_b)\n",
     "            #             return _np.corrcoef(_a, _b)[0, 1]\n",
-    "            return _a @ _b\n",
+    "            return _a @ _b / len(_a)\n",
     "\n",
     "        _pearson_slice = _np.array(list(map(_map_foo, _slice)))\n",
     "        return _pearson_slice\n",
@@ -927,8 +927,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:41:49.099584Z",
-     "start_time": "2023-01-23T06:41:34.116730Z"
+     "end_time": "2023-01-23T14:40:46.482572Z",
+     "start_time": "2023-01-23T14:40:31.991926Z"
     }
    },
    "outputs": [
@@ -936,8 +936,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0011276521115681512\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0022768547376065366\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0006475784561809112\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.002411470150121145\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -974,8 +974,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:41:54.873682Z",
-     "start_time": "2023-01-23T06:41:49.100697Z"
+     "end_time": "2023-01-23T14:40:52.790666Z",
+     "start_time": "2023-01-23T14:40:46.484411Z"
     }
    },
    "outputs": [
@@ -1032,8 +1032,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:42:00.246638Z",
-     "start_time": "2023-01-23T06:41:54.875835Z"
+     "end_time": "2023-01-23T14:40:58.844958Z",
+     "start_time": "2023-01-23T14:40:52.791993Z"
     }
    },
    "outputs": [
@@ -1088,8 +1088,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:42:00.250109Z",
-     "start_time": "2023-01-23T06:42:00.247979Z"
+     "end_time": "2023-01-23T14:40:58.849708Z",
+     "start_time": "2023-01-23T14:40:58.847059Z"
     }
    },
    "outputs": [],
@@ -1151,8 +1151,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:42:00.275371Z",
-     "start_time": "2023-01-23T06:42:00.251657Z"
+     "end_time": "2023-01-23T14:40:58.863319Z",
+     "start_time": "2023-01-23T14:40:58.851143Z"
     }
    },
    "outputs": [],
@@ -1171,8 +1171,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:42:04.227990Z",
-     "start_time": "2023-01-23T06:42:00.276396Z"
+     "end_time": "2023-01-23T14:41:02.820780Z",
+     "start_time": "2023-01-23T14:40:58.864434Z"
     }
    },
    "outputs": [
@@ -1213,8 +1213,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:42:04.231614Z",
-     "start_time": "2023-01-23T06:42:04.229439Z"
+     "end_time": "2023-01-23T14:41:02.825853Z",
+     "start_time": "2023-01-23T14:41:02.823007Z"
     }
    },
    "outputs": [],
@@ -1233,8 +1233,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T06:42:05.708705Z",
-     "start_time": "2023-01-23T06:42:04.232782Z"
+     "end_time": "2023-01-23T14:41:04.189270Z",
+     "start_time": "2023-01-23T14:41:02.827808Z"
     }
    },
    "outputs": [
