add some nonlinearity

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T17:02:04.115725Z",
-     "start_time": "2023-01-23T17:02:02.074082Z"
+     "end_time": "2023-01-28T21:19:19.017806Z",
+     "start_time": "2023-01-28T21:19:19.008199Z"
     }
    },
    "outputs": [],
@@ -18,7 +18,9 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau\n",
     "from scipy.stats import rankdata\n",
-    "import fastHDMI as mi"
+    "import fastHDMI as mi\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import RidgeCV"
    ]
   },
   {
@@ -391,12 +393,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8869bdf",
+   "metadata": {},
+   "source": [
+    "# Try Fitting models to predict age, $5$-fold CV\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e733727e",
+   "id": "98f083c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# parallel continuous version\n",
+    "\n",
+    "a = continuous_filter_csv_parallel(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
+    "b = Pearson_filter_csv_parallel(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
+    "plt.plot(a)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
