add verbose option for muting

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 67,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T00:18:03.796478Z",
-     "start_time": "2023-01-29T00:18:03.786208Z"
+     "end_time": "2023-01-29T02:53:06.796968Z",
+     "start_time": "2023-01-29T02:53:06.781697Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,10 @@
     "from scipy.stats import rankdata\n",
     "import fastHDMI as mi\n",
     "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
     "from sklearn.linear_model import RidgeCV\n",
-    "from sklearn.metrics import r2_score"
+    "from sklearn.metrics import r2_score\n",
+    "import multiprocess as mp"
    ]
   },
   {
@@ -400,34 +402,18 @@
    "id": "4447fa79",
    "metadata": {},
    "source": [
-    "# Try Fitting models to predict age, $5$-fold CV\n"
+    "# Try Fitting models to predict age, $5$-fold CV\n",
+    "## this is for mutual information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "648be1e5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-29T00:25:22.857676Z",
-     "start_time": "2023-01-29T00:25:22.369086Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(r\"../../fastHDMI/tests/sim/sim_continuous.csv\",\n",
-    "                 encoding='unicode_escape',\n",
-    "                 engine='c')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 72,
    "id": "b5cb6b81",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T00:25:28.649468Z",
-     "start_time": "2023-01-29T00:25:22.858973Z"
+     "end_time": "2023-01-29T03:04:20.660753Z",
+     "start_time": "2023-01-29T03:04:14.490031Z"
     }
    },
    "outputs": [
@@ -441,160 +427,96 @@
     }
    ],
    "source": [
-    "num_covariates = 20  # number of covariates to use\n",
-    "outcome_name = \"Var 1\"  # outcome column name\n",
-    "training_proportion = .8\n",
-    "columns = np.array(df.columns.to_list()[2:])  # replace with column names\n",
-    "abide_mi = mi.continuous_filter_csv_parallel(\n",
-    "    r\"../../fastHDMI/tests/sim/sim_continuous.csv\"\n",
-    ")  # replace with calculated MI\n",
-    "_usecols = np.hstack(\n",
-    "    (outcome_name, columns[np.argsort(abide_mi)][:num_covariates]))\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau\n",
+    "from scipy.stats import rankdata\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.metrics import r2_score\n",
+    "import multiprocess as mp\n",
     "\n",
-    "df = pd.read_csv(r\"../../fastHDMI/tests/sim/sim_continuous.csv\",\n",
-    "                 encoding='unicode_escape',\n",
-    "                 usecols=_usecols,\n",
-    "                 engine='c').dropna().sample(\n",
-    "                     frac=1, random_state=1)  #.reset_index(drop=True)\n",
+    "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "original_df = pd.read_csv(csv_file,\n",
+    "                          encoding='unicode_escape',\n",
+    "                          usecols=_usecols,\n",
+    "                          engine='c')\n",
     "\n",
-    "train_test_div = int(np.around(df.shape[0] * training_proportion))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "id": "19a4ed17",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-29T00:25:28.653624Z",
-     "start_time": "2023-01-29T00:25:28.650666Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "X_train, y_train = df.iloc[:train_test_div, 1:], df.iloc[:train_test_div, 0]\n",
-    "X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "id": "5aef837a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-29T00:25:28.712117Z",
-     "start_time": "2023-01-29T00:25:28.654813Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.049884689598572285"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fit = LassoCV(cv = 5).fit(X_train, y_train)\n",
-    "y_pred = fit.predict(X_train)\n",
-    "r2_score(y_train, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "id": "dda4464e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-29T00:26:09.848748Z",
-     "start_time": "2023-01-29T00:26:09.836980Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.41157277,  0.49096506,  0.        ,  0.        ,  0.        ,\n",
-       "        0.        , -0.        , -0.        , -0.        , -0.        ,\n",
-       "       -0.        , -0.        , -0.        ,  0.        ,  0.        ,\n",
-       "       -0.        ,  0.        ,  0.        ,  0.        ,  0.        ])"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fit.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "id": "e83120f8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-29T00:25:28.717281Z",
-     "start_time": "2023-01-29T00:25:28.713146Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(309    -0.651087\n",
-       " 291   -15.233531\n",
-       " 101     6.336366\n",
-       " 806     2.038322\n",
-       " 202     1.460176\n",
-       " 212    -1.609430\n",
-       " 441    -0.233857\n",
-       " 256    16.492763\n",
-       " 53     -4.156150\n",
-       " 671    -5.986385\n",
-       " 732    -3.208397\n",
-       " 30      7.596137\n",
-       " 184     5.079846\n",
-       " 599    12.943055\n",
-       " 762    -7.677536\n",
-       " 43      2.763293\n",
-       " 696     4.293568\n",
-       " 82     -1.084258\n",
-       " 672    -0.260804\n",
-       " 104     4.631023\n",
-       " 385    -2.847121\n",
-       " Name: Var 1, dtype: float64,\n",
-       " array([ 0.11746473,  0.49564459,  0.3262008 ,  0.15337144,  0.54307793,\n",
-       "        -0.02591902,  0.1982461 ,  0.6654314 ,  0.06741068,  0.12083158,\n",
-       "        -0.13005714,  1.00993985, -0.15409416,  0.63384202,  1.0359943 ,\n",
-       "         1.00893783, -0.28294153, -0.0291553 , -0.22184901,  0.02948207,\n",
-       "         0.17007454, -0.5242036 , -0.15331924,  0.06513244, -0.62217599,\n",
-       "         0.16009562,  0.55116086,  0.49994419,  0.14853724, -1.04339986,\n",
-       "         0.14849859, -0.05050166,  0.45290544,  1.18602591, -0.5757509 ,\n",
-       "         0.06095116,  0.43970612,  0.21887864,  2.25404032,  0.06727509,\n",
-       "        -0.78980782,  0.61811774,  0.69516588, -0.2650772 , -0.31833394,\n",
-       "         0.59573931, -0.01146226, -0.01825061,  2.01571861,  0.28424853,\n",
-       "         0.12190327,  0.09701394,  0.89728038,  0.12866382,  1.19041809,\n",
-       "         0.88675345,  0.43942648,  0.07385905, -0.35178002, -0.46888946,\n",
-       "        -1.14759898,  0.38614341,  0.84079877,  0.10686078,  0.16034131,\n",
-       "        -0.64037398, -0.32794162, -0.35745966, -0.38653347,  0.57676176,\n",
-       "        -0.4321904 , -0.28770534,  0.42592397,  0.02160901,  0.53303555,\n",
-       "         0.23023953, -0.06753128, -0.09337139,  1.69377361, -0.03418454,\n",
-       "        -0.63526705,  0.07658945, -0.84566095, -0.06977173,  0.11459898]))"
-      ]
-     },
-     "execution_count": 219,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test, y_pred"
+    "\n",
+    "def testing_error(num_covariates=20,\n",
+    "                  training_proportion=.8,\n",
+    "                  fun=ElasticNetCV,\n",
+    "                  outcome_name=\"AGE_AT_SCAN\",\n",
+    "                  seed=1):\n",
+    "    np.random.seed(seed)\n",
+    "    columns = np.load(r\"./ABIDE_columns.npy\")\n",
+    "    abide_mi = np.load(r\"./ABIDE_age_MI_output.npy\"\n",
+    "                       )  # for Pearson, use ABIDE_age_Pearson_output.npy\n",
+    "    _usecols = np.hstack((outcome_name, \"SEX\", \"DX_GROUP\",\n",
+    "                          columns[np.argsort(abide_mi)][:num_covariates]))\n",
+    "\n",
+    "    df = original_df[_usecols].dropna(inplace=False).sample(\n",
+    "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
+    "                                                              inplace=False)\n",
+    "    if df.shape[0] > 20:\n",
+    "        train_test_div = int(np.around(df.shape[0] * training_proportion))\n",
+    "        X_train, y_train = df.iloc[:train_test_div,\n",
+    "                                   1:], df.iloc[:train_test_div, 0]\n",
+    "        X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:,\n",
+    "                                                               0]\n",
+    "        fit = fun(cv=5, random_state=seed).fit(X_train, y_train)\n",
+    "        y_pred = fit.predict(X_test)\n",
+    "        out = r2_score(y_test, y_pred)\n",
+    "    else:\n",
+    "        out = np.nan\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "def testing_error_rep(num_covariates=20,\n",
+    "                      training_proportion=.8,\n",
+    "                      fun=ElasticNetCV,\n",
+    "                      outcome_name=\"AGE_AT_SCAN\",\n",
+    "                      num_rep=10):\n",
+    "    def _testing_error(seed):\n",
+    "        return testing_error(num_covariates=num_covariates,\n",
+    "                             training_proportion=training_proportion,\n",
+    "                             fun=fun,\n",
+    "                             outcome_name=outcome_name,\n",
+    "                             seed=seed)\n",
+    "\n",
+    "    seeds = np.arange(num_rep)\n",
+    "    return np.array(list(map(_testing_error, seeds)))\n",
+    "\n",
+    "\n",
+    "def testing_error_num_attr(num_attr,\n",
+    "                           training_proportion=.8,\n",
+    "                           fun=ElasticNetCV,\n",
+    "                           outcome_name=\"AGE_AT_SCAN\",\n",
+    "                           num_rep=10):\n",
+    "    def _testing_error_rep(_num_attr):\n",
+    "        return testing_error_rep(num_covariates=_num_attr,\n",
+    "                                 training_proportion=training_proportion,\n",
+    "                                 fun=fun,\n",
+    "                                 outcome_name=outcome_name,\n",
+    "                                 num_rep=num_rep)\n",
+    "\n",
+    "    return np.array(list(map(_testing_error_rep, num_attr)))\n",
+    "\n",
+    "\n",
+    "output = testing_error_num_attr(\n",
+    "    num_attr=list(\n",
+    "        map(int,\n",
+    "            np.around(np.linspace(0, 149959 / 100, 50 + 1)[1:]).tolist())\n",
+    "    ),  # so here it will screen the number of covariates roughly 30 apart\n",
+    "    training_proportion=.8,  # 80/20 training+validation/testing division\n",
+    "    fun=ElasticNetCV,  # here it says to use ElasticNetCV\n",
+    "    outcome_name=\"AGE_AT_SCAN\",\n",
+    "    num_rep=200)\n",
+    "np.save(r\"./ABIDE_age_MI_ElasticNetCV\", output)"
    ]
   },
   {
