--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -408,21 +408,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "id": "b5cb6b81",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T03:04:20.660753Z",
-     "start_time": "2023-01-29T03:04:14.490031Z"
+     "end_time": "2023-01-29T04:11:44.190787Z",
+     "start_time": "2023-01-29T04:11:42.184031Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\n",
-      "Reading variable names from csv file finished.\n"
+     "ename": "NameError",
+     "evalue": "name '_usecols' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_22827/1298178150.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m original_df = pd.read_csv(csv_file,\n\u001b[1;32m     16\u001b[0m                           \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'unicode_escape'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m                           \u001b[0musecols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_usecols\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m                           engine='c')\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name '_usecols' is not defined"
      ]
     }
    ],
@@ -457,7 +460,7 @@
     "    abide_mi = np.load(r\"./ABIDE_age_MI_output.npy\"\n",
     "                       )  # for Pearson, use ABIDE_age_Pearson_output.npy\n",
     "    _usecols = np.hstack((outcome_name, \"SEX\", \"DX_GROUP\",\n",
-    "                          columns[np.argsort(abide_mi)][:num_covariates]))\n",
+    "                          columns[np.argsort(-abide_mi)][:num_covariates]))\n",
     "\n",
     "    df = original_df[_usecols].dropna(inplace=False).sample(\n",
     "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
@@ -522,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcae946e",
+   "id": "897238c1",
    "metadata": {},
    "outputs": [],
    "source": []
