RidgeCV doesn't allow seed settings

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -536,7 +536,9 @@
     "    \"\"\"\n",
     "    Read a csv file using differnet engines. Use dask to read csv if low in memory.\n",
     "    \"\"\"\n",
-    "    assert csv_engine == \"dask\" or csv_engine == \"pyarrow\" or csv_engine == \"fastparquet\" or csv_engine == \"c\" or csv_engine == \"python\", \"Only dask and pandas csv engines or fastparquet are supported to read csv files.\"\n",
+    "    assert csv_engine in [\n",
+    "        \"dask\", \"pyarrow\", \"fastparquet\", \"c\", \"python\"\n",
+    "    ], \"Only dask and pandas csv engines or fastparquet are supported to read csv files.\"\n",
     "    if _np.array(_usecols).size == 0:\n",
     "        if verbose > 0:\n",
     "            print(\n",
@@ -545,7 +547,8 @@
     "        if csv_engine == \"dask\":\n",
     "            _csv = _dd.read_csv(csv_file, sample=sample)\n",
     "            _usecols = list(_csv.columns)[1:]\n",
-    "        elif csv_engine == \"pyarrow\" or csv_engine == \"c\" or csv_engine == \"python\":\n",
+    "        elif csv_engine in [\"pyarrow\", \"c\",\n",
+    "                            \"python\"]:  # these are pandas CSV engines\n",
     "            _csv = _pd.read_csv(csv_file,\n",
     "                                encoding='unicode_escape',\n",
     "                                engine=csv_engine)\n",
@@ -559,7 +562,7 @@
     "        _usecols = _np.array(_usecols)\n",
     "        if csv_engine == \"dask\":\n",
     "            _csv = _dd.read_csv(csv_file, names=_usecols, sample=sample)\n",
-    "        elif csv_engine == \"pyarrow\" or csv_engine == \"c\" or csv_engine == \"python\":\n",
+    "        elif csv_engine in [\"pyarrow\", \"c\", \"python\"]:\n",
     "            _csv = _pd.read_csv(csv_file,\n",
     "                                encoding='unicode_escape',\n",
     "                                usecols=_usecols,\n",
@@ -577,7 +580,8 @@
     "    \"\"\"\n",
     "    if csv_engine == \"dask\":\n",
     "        _ = _np.asarray(_csv[__].dropna().compute())\n",
-    "    elif csv_engine == \"pyarrow\" or csv_engine == \"c\" or csv_engine == \"python\" or csv_engine == \"fastparquet\":\n",
+    "    elif csv_engine in [\"pyarrow\", \"c\", \"python\",\n",
+    "                        \"fastparquet\"]:  # these are engines using pandas\n",
     "        _ = _csv[__].dropna().to_numpy()\n",
     "\n",
     "    _a = _[:, 0]\n",
@@ -1312,7 +1316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
