adjust some case study settings

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:13:52.955704Z",
-     "start_time": "2023-01-29T21:13:52.944548Z"
+     "end_time": "2023-01-29T21:58:37.232013Z",
+     "start_time": "2023-01-29T21:58:37.225455Z"
     }
    },
    "outputs": [],
@@ -434,6 +434,9 @@
     "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
+    "columns = np.load(r\"./ABIDE_columns.npy\")\n",
+    "abide_dep = np.load(r\"./ABIDE_age_MI_output.npy\"\n",
+    "                    )  # for Pearson, use ABIDE_age_Pearson_output.npy\n",
     "\n",
     "\n",
     "def testing_error(num_covariates=20,\n",
@@ -442,12 +445,8 @@
     "                  outcome_name=\"AGE_AT_SCAN\",\n",
     "                  seed=1):\n",
     "    np.random.seed(seed)\n",
-    "    columns = np.load(r\"./ABIDE_columns.npy\")\n",
-    "    abide_mi = np.load(r\"./ABIDE_age_MI_output.npy\"\n",
-    "                       )  # for Pearson, use ABIDE_age_Pearson_output.npy\n",
     "    _usecols = np.hstack((outcome_name, \"SEX\", \"DX_GROUP\",\n",
-    "                          columns[np.argsort(-abide_mi)][:num_covariates]))\n",
-    "\n",
+    "                          columns[np.argsort(-abide_dep)][:num_covariates]))\n",
     "    df = original_df[_usecols].dropna(inplace=False).sample(\n",
     "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
     "                                                              inplace=False)\n",
@@ -502,7 +501,8 @@
     "output = testing_error_num_attr(\n",
     "    num_attr=list(\n",
     "        map(int,\n",
-    "            np.around(np.linspace(0, 149959 / 100, 50 + 1)[1:]).tolist())\n",
+    "            np.around(np.linspace(0,\n",
+    "                                  len(columns) / 20, 500 + 1)[1:]).tolist())\n",
     "    ),  # so here it will screen the number of covariates roughly 30 apart\n",
     "    training_proportion=.8,  # 80/20 training+validation/testing division\n",
     "    fun=ElasticNetCV,  # here it says to use ElasticNetCV\n",
@@ -569,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
